# lyri

./: .env.sample  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: cli.rs  lib.rs  progress.rs
data/: blur.json  kendrick_lamar.json  oasis.json  portishead.json  portishead_with_lyrics.json  primal_scream.json  the_smiths.json  tinariwen.json  tinariwen_with_lyrics.json
files/: Cargo.toml
files/src/: file_manager.rs
genius/: Cargo.toml
genius/src/: constants.rs  genius.rs  lib.rs
genius/src/model/: artist.rs  mod.rs  responses.rs
processing/: Cargo.toml
processing/src/: filters.rs
scraper/: Cargo.toml
scraper/src/: scraper.rs
src/: args.rs  artists.rs  file_manager.rs  genius.rs  lyri.rs  main.rs  post_processor.rs  scraper.rs  song.rs
src/model/: artist.rs  files.rs  hit.rs  mod.rs  responses.rs  song.rs
