[package]
name = "lyri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genius = { path = "./genius" }
scraper = { path = "./scraper" }
clap = { version = "4.3.0", features = ["derive"] }
regex = "1.8.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.28.1", features = ["full"] }
