[package]
name = "lyri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
cli = { path = "./cli" }
files = { path = "./files" }
genius = { path = "./genius" }
processing = { path = "./processing" }
scraper = { path = "./scraper" }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.28.1", features = ["full"] }
